--- a/app/src/style/colors.scss
+++ b/app/src/style/colors.scss
@@ -2,8 +2,9 @@ $darkest-green: #091200;
 $dark-green: #1d3633;
 $mid-green: #69937d;
 $light-green: #cce4c4;
+$light-green-darker: #bcd4b4;
 
 $neutral-grey: #eee;
-$darker-grey: #ccc;
+$darker-grey: #ddd;
 
 $text-light: #f3f3f3;
