Adjusted the styling and responsiveness

--- a/app/src/style/colors.scss
+++ b/app/src/style/colors.scss
@@ -5,6 +5,7 @@ $light-green: #cce4c4;
 $light-green-darker: #bcd4b4;
 
 $neutral-grey: #eee;
+$muted-grey: #999;
 $darker-grey: #ddd;
 
 $text-light: #f3f3f3;
